--- a/configuration.json
+++ b/configuration.json
@@ -1,1 +1,99 @@
-{}
+{
+  "repositories": [
+    "invoicing-ui-service.git",
+    "doc-control-ui-service.git",
+    "documents-js-monorepo.git",
+    "document-service.git",
+    "sendgrid_email_templates.git",
+    "connection-hub-ui-service.git",
+    "tool-panels-js-monorepo.git",
+    "currency-configuration-ui.git",
+    "workflows-js-monorepo.git",
+    "currency-configuration-service.git",
+    "payments-js-monorepo.git",
+    "onboarding-js-monorepo.git",
+    "free-account-ui-service.git",
+    "account-onboarding-ui-service.git",
+    "document-viewer-ui-service.git",
+    "bim-models-ui-service.git",
+    "bim-webviewer.git",
+    "bim-plugins-ui-service.git",
+    "bim-ui-js-monorepo.git",
+    "bim-plugins.git",
+    "ditto.git",
+    "imports.git",
+    "bim-plugins-shell.git",
+    "map-tool-ui-service.git",
+    "payments-ui-service.git",
+    "construction_network_front_end.git",
+    "header-ui-service.git",
+    "rfis-ui-service.git",
+    "cde.git",
+    "conversations-js-monorepo.git",
+    "project-home-ui-service.git",
+    "directory-ui-service.git",
+    "equipment-ui-service.git",
+    "tasks-ui-service.git",
+    "action-plans-ui-service.git",
+    "reporting-applications-ui-service.git",
+    "bidding-admin-ui-service.git",
+    "compliance-ui-service.git",
+    "meetings-ui-service.git",
+    "ecomm-ui-service.git",
+    "procore-calendar-js-monorepo.git",
+    "ui-service-shell.git",
+    "business-registry.git",
+    "documents-ui-service.git",
+    "platform-internationalization-js-monorepo.git",
+    "configurable-views-js-monorepo.git",
+    "submittals-ui-service.git",
+    "copilot.git",
+    "inspections-ui-service.git",
+    "observations-ui-service.git",
+    "punch-list-ui-service.git",
+    "incidents-ui-service.git",
+    "erp-ui.git",
+    "early-access-ui-service.git",
+    "locations-ui-service.git",
+    "sidepanel-ui-service.git",
+    "webhooks-ui-service.git",
+    "portfolio-hub-ui-service.git",
+    "sauce-viewer-poc-ui-service.git",
+    "unified-viewer-proof-of-concept-ui-service.git",
+    "account-domain-ui-service.git",
+    "equipment-register.git",
+    "daily-log-ui-service.git",
+    "projects-ui-service.git",
+    "forms-ui-service.git",
+    "drills-ui-service.git",
+    "budgets-ui-service.git",
+    "feature-components-js-monorepo.git",
+    "lien-rights-ui-service.git",
+    "security-mfa-ui-service.git",
+    "contracts-ui-service.git",
+    "bidding-vendor-service.git",
+    "uom-ui-service.git",
+    "project-health-ui-service.git",
+    "embedded-insights-ui-service.git",
+    "contextual-help-ui-service.git",
+    "specifications-ui-service.git",
+    "conversations-ui-service.git",
+    "timesheets-ui-service.git",
+    "company-timesheets-ui-service.git",
+    "crews-ui-service.git",
+    "time-and-materials-ui-service.git",
+    "custom-reports-ui-service-ui-service.git",
+    "custom-reports-ui-service.git",
+    "authentication-ui-service.git",
+    "document-security-settings-ui-service.git",
+    "permissions-ui-service.git",
+    "workflows-ui-service.git",
+    "change-events-ui-service.git",
+    "change-history-ui-service.git",
+    "coordination-issues-ui-service.git",
+    "celi-select-js-monorepo.git",
+    "tax-ui-service.git",
+    "planroom-ui-service.git",
+    "certication-analytics-ui-service.git"
+  ]
+}
